--- a/consoleApp/Jeux.ui
+++ b/consoleApp/Jeux.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>831</width>
-    <height>635</height>
+    <width>832</width>
+    <height>632</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>832</width>
+    <height>632</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>832</width>
+    <height>632</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -76,6 +88,19 @@
       <string/>
      </property>
     </widget>
+    <widget class="QPushButton" name="ButtonJouer">
+     <property name="geometry">
+      <rect>
+       <x>8</x>
+       <y>560</y>
+       <width>131</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>jouer</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -83,7 +108,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>831</width>
+     <width>832</width>
      <height>22</height>
     </rect>
    </property>
