--- a/consoleApp/Jeux.ui
+++ b/consoleApp/Jeux.ui
@@ -62,16 +62,20 @@
         <height>491</height>
        </rect>
       </property>
-      <layout class="QGridLayout" name="gridLayout"/>
+      <layout class="QGridLayout" name="gridLayout">
+       <property name="verticalSpacing">
+        <number>0</number>
+       </property>
+      </layout>
      </widget>
     </widget>
     <widget class="QWidget" name="joueur1" native="true">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>520</y>
-       <width>531</width>
-       <height>71</height>
+       <x>140</x>
+       <y>500</y>
+       <width>571</width>
+       <height>81</height>
       </rect>
      </property>
     </widget>
@@ -80,26 +84,54 @@
       <rect>
        <x>10</x>
        <y>510</y>
-       <width>161</width>
-       <height>41</height>
+       <width>131</width>
+       <height>71</height>
       </rect>
      </property>
      <property name="text">
       <string/>
      </property>
     </widget>
-    <widget class="QPushButton" name="ButtonJouer">
+    <widget class="QWidget" name="gridLayoutWidget_2">
      <property name="geometry">
       <rect>
-       <x>8</x>
-       <y>560</y>
-       <width>131</width>
-       <height>25</height>
+       <x>140</x>
+       <y>510</y>
+       <width>571</width>
+       <height>71</height>
       </rect>
      </property>
-     <property name="text">
-      <string>jouer</string>
+     <layout class="QGridLayout" name="gridLayout_main">
+      <property name="verticalSpacing">
+       <number>1</number>
+      </property>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="verticalLayoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>710</x>
+       <y>510</y>
+       <width>111</width>
+       <height>71</height>
+      </rect>
      </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QPushButton" name="ButtonJouer">
+        <property name="text">
+         <string>jouer</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="boutoPiocher">
+        <property name="text">
+         <string>Piocher</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </widget>
   </widget>
