--- a/consoleApp/Jeux.ui
+++ b/consoleApp/Jeux.ui
@@ -72,20 +72,40 @@
     <widget class="QWidget" name="joueur1" native="true">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>130</x>
        <y>500</y>
-       <width>571</width>
+       <width>581</width>
        <height>81</height>
       </rect>
      </property>
+     <widget class="QSpinBox" name="val1">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>10</y>
+        <width>61</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="val2">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>50</y>
+        <width>61</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>30</x>
        <y>510</y>
-       <width>131</width>
-       <height>71</height>
+       <width>101</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
@@ -95,9 +115,9 @@
     <widget class="QWidget" name="gridLayoutWidget_2">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>210</x>
        <y>510</y>
-       <width>571</width>
+       <width>501</width>
        <height>71</height>
       </rect>
      </property>
@@ -132,6 +152,16 @@
        </widget>
       </item>
      </layout>
+    </widget>
+    <widget class="QComboBox" name="angle">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>550</y>
+       <width>86</width>
+       <height>25</height>
+      </rect>
+     </property>
     </widget>
    </widget>
   </widget>
